fix images path issue

--- a/src/blocks/place-card/__like-icon/place-card__like-icon.css
+++ b/src/blocks/place-card/__like-icon/place-card__like-icon.css
@@ -1,6 +1,6 @@
 .place-card__like-icon {
   position: relative;
-  background: url(../images/like-inactive.svg) center no-repeat;
+  background: url(./images/like-inactive.svg) center no-repeat;
   background-color: transparent;
   border: none;
   width: 21px;
@@ -19,7 +19,7 @@
 }
 
 .place-card__like-icon_liked {
-  background-image: url(../images/like-active.svg);
+  background-image: url(./images/like-active.svg);
 }
 
 .place-card__like-icon:hover {
