--- a/src/blocks/places-list/places-list.css
+++ b/src/blocks/places-list/places-list.css
@@ -1,6 +1,16 @@
+@import url(./__card/places-list__card.css);
+
 .places-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 282px);
-  grid-gap: 18px 18px;
+  display: flex; /* IE11 */
+  flex-wrap: wrap;
   justify-content: center;
+  margin: 0 auto;
+}
+
+@supports (display: grid) {
+  .places-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 282px);
+    grid-gap: 18px 18px;
+  }
 }
